fix: header layout - reduced max height on mobile

--- a/src/styles/partials/layout.sass
+++ b/src/styles/partials/layout.sass
@@ -1,7 +1,7 @@
 #layout
     display: grid
     height: 100%
-    grid-template-rows: minmax(60px, 10vh) 1fr minmax(60px, 10vh)
+    grid-template-rows: minmax(60px, 8vh) 1fr minmax(60px, 10vh)
     border: 1px solid red
     
     // TABLET
